3 note auto code with event markers and implmentation code for event markers